styles/style.css
:root {
    font-size: 1rem;
}

html {
    margin: auto;
    background-color: white;
    box-sizing: border-box;
    max-width: 100%;
}

body {
    font-family: Arial, Helvetica, sans-serif;
    background-color: #EEEEEE;
    position: relative;
    padding-bottom: 10px;
    overflow-x: hidden;
    position: relative;
    width: 80%;
    margin: auto;
    box-sizing: border-box;
}

a {
    text-decoration: none;
}

.nav1 {
    display: flex;
    flex-direction: row;
    justify-content: space-around;
    top: 0;
    position: sticky;
    background-color: white;
}

#container-1-1 {
    padding-left: 0rem;
    margin-top: 0.5rem;
}

.search-button {
    display: flex;
    flex-direction: row;
    justify-content: flex-end;
}

#search-bar {
    padding-top: 0.59rem;
    color: lightgrey;
    font-size: 1rem;
    flex: 5 1 60%;
}

.nav1 > form > div > button {
    color: grey;
    background-color: rgb(248, 244, 244);
    box-shadow: none;
    height: 2rem;
    border: 1px solid grey;
    position: relative;
    flex: 1 5 5%;
    padding: 3%;
}

#hour-glass {
    color: rgb(173, 166, 166);
    position: absolute;
    right: 2.5rem;
    bottom: 0.3rem;
}

#container-1-3 {
    display: flex;
    padding: 0.2rem;
}

.navbar-icons {
    color: grey;
}

#sign-in {
    border: 2px solid rgb(12, 124, 189);
    background-color: rgb(12, 124, 189);
    padding: 0.5rem;
    color: white;
    font-size: 1rem;
    font-weight: bold;
}

.textadjust1 {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    opacity: 0.4;
}

#side-header {
    /* object-fit: cover; */
    position: relative;
    right: 0.5rem;
}

.main-containers {
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    grid-template-rows: 1fr 2rem;
    grid-gap: 0.1rem;
    width: auto;
}

.first-column {
    padding: auto;
    width: auto;
    grid-area: 1/1/-1/3;
}

iframe {
    width: 98.5%;
    border-top: 1rem solid #EEEEEE;
    border-right: 1rem solid #EEEEEE;
    border-bottom: 1rem solid #EEEEEE;
}

.side-containers {
    width: auto;
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(210px, 1fr));
    grid-template-rows: 2rem repeat(20, 10rem) 2rem;
    grid-area: 1/3/-1/4;
    grid-gap: 0.2rem;
    margin: auto;
}

.side-containers > p:first-child {
    font-size: 1.5rem;
}

.side-containers > img:nth-child(2) {
    height: 100%;
    object-fit: fill;
    width: auto;
}

.content-info {
    color: black;
    display: block;
    border-top: solid #EEEEEE;
    border-right: 1rem solid #EEEEEE;
    border-bottom: 1rem solid #EEEEEE;
    background-color: white;
    line-height: 2rem;
    padding: 2rem;
    margin-left: -0.1rem;
    margin-bottom: 0.5rem;
}

.content-info > p:nth-child(5) {
    padding-left: 45%;
    margin-top: 5%;
    border-top: 0.1rem solid #EEEEEE;
    color: grey;
}

.upload-text {
    margin-left: 0.8rem;
    display: flex;
    align-self: center;
}

.video-info-container {
    display: flex;
    position: relative;
    flex-direction: row;
    justify-content: flex-start;
    background-color: white;
    flex-wrap: wrap;
    width: 98.5%;
    height: 10rem;
}

.video-info-container > p {
    width: 100%;
    position: absolute;
    align-self: center;
    color: grey;
}

.button1 {
    position: absolute;
    align-self: center;
    padding-left: 45%;
    flex-basis: auto;
    display: inline-block;
}

.button1 > div:first-child {
    display: inline;
    border-bottom: 0.2rem solid grey;
    padding-bottom: 4rem;
}

.button1 > div:last-child {
    display: inline;
}

.grey-underline {
    border-bottom: 0.2rem solid grey;
    width: 7rem;
    position: static;
    margin-left: 41rem;
}

span i {
    margin-left: 100%;
    align-self: baseline;
}

.fas fa-share {
    padding-right: auto;
}

h3 {
    font-size: 1.5rem;
    position: relative;
    align-self: flex-start;
    font-weight: 800;
}

.no-of-views-and-btn-texts {
    color: grey;
    font-size: small;
    display: inline;
}

.btn {
    width: 5;
    height: 5;
    border: none;
    background-color: white;
    display: inline-flex;
    color: grey;
}

.youtuber-info {
    display: inline-block;
}

/* The Odin Project Youtuber name*/
.youtuber-info > p:first-child {
    font-weight: bold;
}

.verified-icon {
    color: grey;
    position: relative;
    top: 0.4rem;
}

/* Number of subscribers*/
.youtuber-info > p:last-child {
    color: grey;
    font-size: 0.8rem;
    position: relative;
    bottom: 0.7rem;
}

#subscribe {
    margin-left: 13rem;
    padding: 0.6rem;
    color: white;
    background-color: rgb(211, 12, 12);
    border: none;
    position: relative;
    top: -1.8rem;
    left: 0;
}

.share-save-like-dislike {
    padding-top: 0.4rem;
}

#loading-comments {
    margin-left: 50%;
    margin-top: 20%;
}

#show-more {
    color: grey;
    padding-left: 50%;
    padding-top: 0.2rem;
    border-top: 1px solid grey;
    margin-top: 0.5rem;
}

#text-avtar-image {
    margin-right: 0.1rem;
    position: relative;
    margin-bottom: 3.5rem;
    display: inline;
}

.show-more-2 {
    grid-area: 22/1/23/3;
    color: lightgrey;
    padding-left: 42%;
    border-top: 0.1rem solid lightgray;
}

.recommended-videos-thumbnails {
    width: 100%;
    height: 150;
}

footer {
    background-color: white;
    position: relative;
    left: 0;
    right: 0;
    bottom: 0;
    border: 1px solid rgb(236, 234, 234);
}

.footer-buttons {
    display: inline-flex;
    border: 1px solid grey;
    padding: 3px;
    background-color: lightgrey;
}

select {
    background-color: lightgrey;
    padding-right: 5px;
}

.footer-forms {
    border: none;
}

#footer-link + a {
    color: black;
}

.bottom-links-2 {
    color: grey;
    font-size: 10px;
}

#choose-language-image {
    width: 100%;
    border-top: 1.5rem;
    border-top: 1rem solid #EEEEEE;
}

#youtube-logo-footer {
    align-self: center;
}

#footer-links {
    display: flex;
    flex-direction: row;
    justify-content: flex-start;
    border-top: 1px solid lightgrey;
    font-weight: bold;
    margin-top: 10px;
}

.footer1 {
    display: flex;
    flex-direction: column;
    align-items: stretch;
    height: auto;
}

#footer-top {
    display: flex;
    flex-direction: row;
    justify-content: flex-start;
    height: 2rem;
}

#footer-links {
    display: block;
    padding: 0.5rem;
}

.bottom-links-1 {
    display: inline block;
}

.bottom-links-2 {
    display: inline;
    margin-left: 0.5rem;
}

